tests/typing/fail/pre-03.stderr
error: expected `;`
 --> tests/typing/fail/pre-03.rs:8:37
  |
8 |         a : int = 0 -> 1 -> pre pre pre 0;
  |                                     ^^^
